fixed layout issues

--- a/src/components/Header/assets/style.scss
+++ b/src/components/Header/assets/style.scss
@@ -5,6 +5,7 @@
   .row {
       padding: 2rem 1rem;
       min-height: 40vh;
+      max-width: 100%;
 
       .left-block {
          h1 {
